[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "Friday"
version = "0.2"
dependencies = [
    "gitpython", "openai-whisper", "speechrecognition", 
    "sounddevice", "numpy", "pydub", "pyaudio", "soundfile", 
    "requests", "tqdm", "wrapper-bar", "colorama", "wikipedia",
    "argpi"
]

[tool.maturin]
python-source = "pysrc"
module-name = "Friday.rust"

[project.urls]
GitHub = "https://github.com/d33pster/Quinn"

[project.scripts]
friday = "Friday:friday.main"